--- a/Views/MacroPartials/HeaderNavigation.cshtml
+++ b/Views/MacroPartials/HeaderNavigation.cshtml
@@ -31,7 +31,7 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                         <div id="logo">
-                            <a href="http://localhost:64439/" rel="home" title="Home">
+                            <a href="/" rel="home" title="Home">
                                 @{
                                     var typedMediaPickerSingle = site.Value<IPublishedContent>("siteLogo");
                                     if (typedMediaPickerSingle != null)
