--- a/Views/Partials/_OnDemoRequest.cshtml
+++ b/Views/Partials/_OnDemoRequest.cshtml
@@ -49,7 +49,7 @@
             <br />
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input type="checkbox" name="terms" id="dterms" class="form-check-input">Please accept <a href="http://localhost:64439/terms-conditions/"> terms and conditions</a> ?
+                    <input type="checkbox" name="terms" id="dterms" class="form-check-input">Please accept <a href="/terms-conditions/"> terms and conditions</a> ?
                     <div id="dterms_error" style="color:red"></div>
                 </label>
             </div>
