New Build Nov 14 2019

--- a/Views/InnerDetailPage.cshtml
+++ b/Views/InnerDetailPage.cshtml
@@ -190,32 +190,100 @@
 
         <section class="container biz_service text-left cms_services skill">
             <div class="row inner_des">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                    <h2>You will be responsible for</h2>
+                <div class="col-lg-8 col-md-7 col-sm-12 col-12">
+                    <div class="row social_menu">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                            <ul class="list-unstyled list-inline">
+                                <li class="list-inline-item">
+                                    SHARE :
+                                </li>
+                                <li class="list-inline-item share_social">
+                                    <a href="http://www.facebook.com/sharer.php" target="_blank">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item share_social">
+                                    <a href="#" target="_blank">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item share_social">
+                                    <a href="#" target="_blank">
+                                        <i class="fab fa-linkedin-in"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                            <h2>You will be responsible for</h2>
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-12 ">
+                            <ul class="list-unstyled">
+                                <li> Strong experience in architecture of Java.</li>
+                                <li>Strong understanding of large scale distributed architectures, reactive </li>
+                                <li>
+                                    programming paradigms, design patterns, application development processes and
+                                    practices
+                                </li>
+                                <li>Should have strong understanding of transactional databases, and of multiple </li>
+                                <li>types of NoSQL databases like Cassandra/MongoDB</li>
+                                <li>Knowledge of Elasticsearch or Lucene</li>
+                                <li>Understanding of Spring & Play framework</li>
+                                <li>Knowledge of Kafka or any other queue implementation</li>
+                                <li>Should have strong understanding of transactional databases, and of multiple </li>
+                                <li>types of NoSQL databases like Cassandra/MongoDB</li>
+                                <li>Knowledge of Elasticsearch or Lucene</li>
+                                <li>Understanding of Spring & Play framework</li>
+                                <li>Knowledge of Kafka or any other queue implementation</li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-12 work_btn">
+                            <a href="#biz_requirement" class="btn contact_orange_btn about_border white_text about_them_color" role="button" data-toggle="modal">Apply For This Job</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-12 ">
-                    <ul class="list-unstyled">
-                        <li> Strong experience in architecture of Java.</li>
-                        <li>Strong understanding of large scale distributed architectures, reactive </li>
-                        <li>
-                            programming paradigms, design patterns, application development processes and
-                            practices
-                        </li>
-                        <li>Should have strong understanding of transactional databases, and of multiple </li>
-                        <li>types of NoSQL databases like Cassandra/MongoDB</li>
-                        <li>Knowledge of Elasticsearch or Lucene</li>
-                        <li>Understanding of Spring & Play framework</li>
-                        <li>Knowledge of Kafka or any other queue implementation</li>
-                        <li>Should have strong understanding of transactional databases, and of multiple </li>
-                        <li>types of NoSQL databases like Cassandra/MongoDB</li>
-                        <li>Knowledge of Elasticsearch or Lucene</li>
-                        <li>Understanding of Spring & Play framework</li>
-                        <li>Knowledge of Kafka or any other queue implementation</li>
-                    </ul>
+                <div class="col-lg-4 col-md-5 col-sm-12 col-12 open_pstn">
+                    <!--            <div class="">-->
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                            <h3 class="">Job For You</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                            <div class="spc_req">
+                                <p><strong>Banglore | India</strong></p>
+                                <a href="skill-requirement.html"><h4 class="opening_position">Java Developer</h4></a>
+                                <p class="spe_des">Full time,Bangalore, India</p>
+                                <p class="spe_post_date">posted 12 hr ago</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                            <div class="spc_req">
+                                <p><strong>Banglore | India</strong></p>
+                                <a href="skill-requirement.html"><h4 class="opening_position">Java Developer</h4></a>
+                                <p class="spe_des">Full time,Bangalore, India</p>
+                                <p class="spe_post_date">posted 12 hr ago</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                            <div class="spc_req">
+                                <p><strong>Banglore | India</strong></p>
+                                <a href="skill-requirement.html"><h4 class="opening_position">Java Developer</h4></a>
+                                <p class="spe_des">Full time,Bangalore, India</p>
+                                <p class="spe_post_date">posted 12 hr ago</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 text-right more_job">
+                            <a href="career.html" role="button" class="about_text ">VIEW MORE <span><i class="far fa-arrow-alt-circle-right"></i></span></a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-12 work_btn">
-                    <a href="#" class="btn contact_orange_btn about_border white_text about_them_color" role="button" data-toggle="modal" data-backdrop="static" data-target="#biz_requirement">Apply For This Job</a>
-                </div>
+                <!--        </div>-->
             </div>
         </section>
 
