--- a/Views/LandingPages/services/ourServices.cshtml
+++ b/Views/LandingPages/services/ourServices.cshtml
@@ -27,7 +27,10 @@
                                     </div>
                             <div class="col-lg-6 col-md-6 col-sm-4 service_images">
                                 <div class="wow fadeInRight" data-wow-duration="4s">
-                                    <img src="@selectedImg.Url" class="img-fluid" alt="@selectedImg.Name">
+                                    @if (selectedImg != null)
+                                    {
+                                        <img src="@selectedImg.Url" class="img-fluid" alt="@selectedImg.Name">
+                                    }
                                 </div>
                             </div>
                         </div>
@@ -39,7 +42,10 @@
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-4 service_images">
                                 <div class="wow fadeInLeft" data-wow-duration="4s">
-                                    <img src="@selectedImg.Url" class="img-fluid" alt="@selectedImg.Name">
+                                    @if (selectedImg != null)
+                                    {
+                                        <img src="@selectedImg.Url" class="img-fluid" alt="@selectedImg.Name">
+                                    }
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-8 col-12 service_des wow fadeInRight" data-wow-duration="2s">
