--- a/css/style.css
+++ b/css/style.css
@@ -17022,12 +17022,12 @@ button:focus {
     }
 
     .open_pstn .spc_req a {
-        font-size: 18px;
+        display: block;
+        color: #232F3E;
     }
 
         .open_pstn .spc_req a:hover {
-            text-decoration: none;
-            color: #c66219;
+            color: #ff6400;
         }
 
 .social_page {
@@ -17549,15 +17549,124 @@ button:focus {
         color: #ff6400;
     }
 
+.skill .inner_des .social_menu {
+    background: #f5f5f5;
+}
+
+    .skill .inner_des .social_menu ul {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+        .skill .inner_des .social_menu ul li {
+            font-weight: bold;
+            padding-bottom: 0;
+        }
+
+            .skill .inner_des .social_menu ul li:before {
+                content: "";
+            }
+
+        .skill .inner_des .social_menu ul .share_social {
+            border: 2px solid #232F3E;
+            border-radius: 100%;
+            width: 50px;
+            height: 50px;
+            text-align: center;
+            padding: 8px;
+        }
+
+@media (max-width: 428px) and (min-width: 320px) {
+    .skill .inner_des .social_menu ul .share_social {
+        width: 40px;
+        height: 40px;
+    }
+}
+
+.skill .inner_des .social_menu ul .share_social a {
+    text-align: center;
+    display: block;
+    margin: 0;
+    font-size: 21px;
+    color: black;
+}
+
+@media (max-width: 428px) and (min-width: 320px) {
+    .skill .inner_des .social_menu ul .share_social a {
+        font-size: 16px;
+    }
+}
+
+.skill .inner_des .social_menu ul .share_social a:hover {
+    text-decoration: none;
+}
+
+.skill .inner_des .social_menu ul .share_social:hover {
+    border-color: #d5690f;
+    background: #ff6400;
+}
+
+    .skill .inner_des .social_menu ul .share_social:hover a {
+        color: white;
+    }
+
 .skill .inner_des .work_btn {
     padding: 20px 15px;
 }
 
-@media screen and (min-width: 911px) {
+@media screen and (min-width: 992px) {
     .skill .inner_des .work_btn .contact_orange_btn {
-        width: 24%;
+        width: 35%;
     }
 }
+
+@media (max-width: 991px) and (min-width: 768px) {
+    .skill .inner_des .work_btn .contact_orange_btn {
+        width: 50%;
+    }
+}
+
+.skill .inner_des .open_pstn {
+    padding-top: 25px;
+    padding-bottom: 50px;
+}
+
+    .skill .inner_des .open_pstn h3 {
+        padding: 0;
+    }
+
+    .skill .inner_des .open_pstn .spc_req {
+        padding: 5px;
+    }
+
+        .skill .inner_des .open_pstn .spc_req p {
+            padding: 5px 12px;
+        }
+
+        .skill .inner_des .open_pstn .spc_req .opening_position {
+            padding-left: 12px;
+            padding-top: 10px;
+        }
+
+        .skill .inner_des .open_pstn .spc_req .spe_des {
+            margin-bottom: 5px;
+        }
+
+        .skill .inner_des .open_pstn .spc_req .spe_post_date {
+            text-align: left;
+        }
+
+    .skill .inner_des .open_pstn .more_job {
+        padding-top: 10px;
+    }
+
+        .skill .inner_des .open_pstn .more_job a {
+            font-weight: bold;
+        }
+
+            .skill .inner_des .open_pstn .more_job a:hover {
+                color: #d5690f;
+            }
 
 .product_them_color {
     background-color: #a072a5;
@@ -19759,7 +19868,4 @@ p {
     .privacy h3 {
         color: #232F3E;
     }
-
-
 /*Some css by me*/
-
